--- a/.env.test
+++ b/.env.test
@@ -1,2 +1,2 @@
-DATABASE_URL=postgres://postgres:postgres@localhost:5432/voucher_test
+DATABASE_URL=postgres://postgres:tapioca@localhost:5432/voucher_test
 PORT=5000
